# music-play-tauri

./: README.md  package-lock.json  package.json
.cursor/: mcp.json
.taskmaster/: config.json
.taskmaster/docs/: mv-player-prd.txt  prd.txt
.taskmaster/reports/: task-complexity-report.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/playlist/: mod.rs
src-tauri/src/video/: commands.rs  metadata.rs  mod.rs  processor.rs  scanner.rs  thumbnail.rs  types.rs
src/components/: AnimatedComponents.tsx  AnimatedPlayButton.tsx  AudioTest.tsx  AudioVisualizer.tsx  CircularProgressBar.tsx  ContextMenu.tsx  FileBrowser.tsx  FullscreenUI.tsx  GracefulDegradationDemo.tsx  GradientProgressBar.tsx  LibraryView.tsx  LiquidProgressBar.tsx  LoadingSpinner.tsx  MainPlayback.tsx  MediaTypeSwitcher.css  MediaTypeSwitcher.tsx  MicroWindowControls.tsx  MobileNav.tsx  Neon2ProgressBar.tsx  Neon3ProgressBar.tsx  NeonProgressBar.tsx  NotificationSettings.tsx  PerformanceMonitor.tsx  PlaybackControls.tsx  PlaybackHistory.tsx  PlaybackModeButton.tsx  PlaybackStats.tsx  PlayerControls.tsx  PlaylistEditor.tsx  PlaylistView.tsx  ProgressBar.tsx  ProgressBarDemo.css  ProgressBarDemo.tsx  PulseProgressBar.tsx  QueueBatchOperations.tsx  SegmentedProgressBar.tsx  SettingsView.tsx  Sidebar.tsx  SkeuomorphicProgressBar.tsx  ThemeToggle.tsx  (+15 more)
src/contexts/: MediaTypeContext.tsx  ThemeContext.tsx  VideoPlaylistContext.tsx
src/hooks/: useCrossPlatform.ts  (+11 more)
(+15 files in other folders)
