[package]
name = "music-play-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "music_play_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["full"] }
lofty = "0.22.4"
rusqlite = { version = "0.36.0", features = ["bundled"] }
thiserror = "2.0.12"
tokio-stream = { version = "0.1.17", features = ["fs"] }
futures = "0.3.31"
tauri-plugin-dialog = "2.2.2"
rodio = "0.19"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Video processing dependencies
ffmpeg-next = "7.1.0"
image = "0.25.5"
mime_guess = "2.0.5"
walkdir = "2.5.0"

